--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Git&GitHub</title>
 </head>
 <body>
-    
+    <!-- header -->
+     <header>
+        <!-- navigation -->
+     </header>
 </body>
 </html>
