--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- header -->
      <header>
         <!-- navigation -->
+         <nav>
+            <ul><li>Homepage</li></ul>
+         </nav>
      </header>
 </body>
 </html>
