--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <nav>
             <ul><li>Homepage</li></ul>
          </nav>
+         <h1>Hello world</h1>
      </header>
 </body>
 </html>
