--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         <!-- navigation -->
          <h1>Hello world</h1>
      </header>
+     <main>
+        <h2>hi</h2>
+        <p>yes</p>
+        <p>no</p>
+        <p>ok</p>
+     </main>
 </body>
 </html>
