--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <!-- navigation -->
          <nav>
             <ul><li>Homepage</li></ul>
+            <ul><li>about</li></ul>
          </nav>
      </header>
 </body>
