--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- header -->
      <header>
         <!-- navigation -->
-         <h1>Hello world</h1>
+         <h2>Bye Bye world</h2>
      </header>
      <main>
         <h2>hi</h2>
