--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <nav>
             <ul><li>Homepage</li></ul>
             <ul><li>about</li></ul>
+            <ul><li>contact</li></ul>
          </nav>
          <h1>Hello world</h1>
          <nav></nav>
