--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git&GitHub</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- header -->
-     <header>
-        <!-- navigation -->
-         <nav>
-            <ul><li>Homepage</li></ul>
-            <ul><li>about</li></ul>
-         </nav>
-         <h1>Hello world</h1>
-         <nav></nav>
-     </header>
-     <main>
-        <h2>hi</h2>
-        <p>yes</p>
-        <p>no</p>
-        <p>ok</p>
-        <p>hello hello</p>
-        <p>good bye</p>
-     </main>
-</body>
+    <header>
+      <!-- navigation -->
+      <nav>
+        <ul>
+          <li>Homepage</li>
+        </ul>
+        <ul>
+          <li>about</li>
+        </ul>
+      </nav>
+      <h1>Hello world</h1>
+      <nav></nav>
+    </header>
+    <main>
+      <h2>hi</h2>
+      <p>yes</p>
+      <p>no</p>
+      <p>ok</p>
+      <p>hello hello</p>
+      <p>good bye</p>
+<!-- section -->
+      <section>
+        <div></div>
+      </section>
+    </main>
+  </body>
 </html>
