--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <p>hello hello</p>
         <p>good bye</p>
      </main>
+     <footer>
+      <p>Copyright by me :)</p>
+     </footer>
 </body>
 </html>
