--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p>hello hello</p>
         <p>good bye</p>
         <p>hihi</p>
+        <img src="https://media.tenor.com/ZlZZTd366EYAAAAM/we-have-no-sappers-dog-accepting-fate.gif" alt="">
      </main>
      <footer>
       <p>Copyright by me :)</p>
