--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
          <nav></nav>
      </header>
      <main>
-        <h2>hi</h2>
+        <div>
+         <h2>hi</h2>
         <p>yes</p>
         <p>no</p>
         <p>ok</p>
         <p>hello hello</p>
         <p>good bye</p>
+        </div>
      </main>
 </body>
 </html>
