--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Git&GitHub</title>
   </head>
   <body>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+      pariatur ipsam consequuntur ipsa, maxime ipsum a? Et ducimus officia illum
+      architecto, labore ipsam consequatur tempore sit doloremque voluptatum
+      eveniet nisi.
+    </p>
     <!-- header -->
-<<<<<<< HEAD
     <header>
       <!-- navigation -->
       <nav>
@@ -28,34 +33,10 @@
       <p>ok</p>
       <p>hello hello</p>
       <p>good bye</p>
-<!-- section -->
+      <!-- section -->
       <section>
         <div></div>
       </section>
     </main>
   </body>
 </html>
-=======
-     <header>
-        <!-- navigation -->
-         <h2>Bye Bye world</h2>
-         <nav>
-            <ul><li>Homepage</li></ul>
-            <ul><li>about</li></ul>
-            <ul><li>contact</li></ul>
-         </nav>
-         <h1>Hello world</h1>
-         <nav></nav>
-     </header>
-     <main>
-        <h2>hi</h2>
-        <p>yes</p>
-        <p>no</p>
-        <p>ok</p>
-        <p>hello hello</p>
-        <p>good bye</p>
-        <p>hihi</p>
-     </main>
-</body>
-</html>
->>>>>>> e7ea823a9f0d1e8fa217cdc795978b4d2cd356ac
