--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p>no</p>
         <p>ok</p>
           <p>Rain</p>
+          <h1>Today we study about git</h1>
      </main>
 </body>
 </html>
