--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p>ok</p>
         <P>Hello everyone</P>
         <p>Hello guys</p>
+        <p>Information Technology</p>
      </main>
      <footer>
       <p>Copyright by me :)</p>
