--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>Information Technology</p>
      </main>
      <footer>
-      <p>Copyright by me :)</p>
+      <p>Copyright by me :</p>
       <h2>Hello teacher </h2>
      </footer>
 </body>
