--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
         <p>ok</p>
           <p>Rain</p>
           <h3>Hello hte</h3>
+
+          <section>
+            <h2>Fruit List</h2>
+            <ul>
+                <li><a href="">Apple</a></li>
+                <li><a href="">Orange</a></li>
+                <li><a href="">Longan</a></li>
+            </ul>
+          </section>
      </main>
 </body>
 </html>
