--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <img src="https://media.tenor.com/ZlZZTd366EYAAAAM/we-have-no-sappers-dog-accepting-fate.gif" alt="">
     </main>
        <footer>
-      <p>Copyright by me :)</p>
-<<<<<<< HEAD
+      <p>Copyright by me :)</p
       <h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Hello cher </h1>
       <h3>Hello ! everyone </h3>
       <h5 style="color: chartreuse;">Who I am ??</h5>
@@ -53,8 +52,8 @@
 
 
 =======
-      <p>yyyy</p>
->>>>>>> 5287348fa3d645b77b61cb93065d6d780f6cf6cc
+      <p>yyyyvy</p>
+
      </footer>
 </body>
 </html>
