--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p>Rain</p>
           <h3>Hello hte</h3>
         <h1>Welcome everyone to ISTAD. <p>Let's grow our ability together.</p></h1>
-        <h3>Hehe not bad.</h3>
+        <h3>Hehe! not bad.</h3>
      </main>
 </body>
 </html>
