--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
      </main>
      <footer>
        <p>2025 is so steav</p>
-      <p>Copyright by me :)</p>
+      <p>Copyright by me </p>
+      <p>I love me.</p>
      </footer>
 
 </body>
