--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <img src="https://www.google.com/imgres?q=img&imgurl=https%3A%2F%2Fworld-schools.com%2Fwp-content%2Fuploads%2F2023%2F01%2FIMG-Academy-cover-WS.webp&imgrefurl=https%3A%2F%2Fworld-schools.com%2Fschools%2Fimg-academy%2F&docid=zbLsGWC-kxLTBM&tbnid=qeY-d3GB9DETIM&vet=12ahUKEwixsLTw_ruOAxWAa_UHHfiHB6cQM3oECBoQAA..i&w=1900&h=950&hcb=2&ved=2ahUKEwixsLTw_ruOAxWAa_UHHfiHB6cQM3oECBoQAA">
           <p>Hello everyone</p>
           <P>Sokkhan want to school</P>
+          <p>Why I can't push git </p>
      </main>
 </body>
 </html>
